// ===========================================================================
// QUEST PLATFORM - FULL SCHEMA (100% compatible with dbdiagram.io)
// ===========================================================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username varchar(50) [unique, not null]
  wallet_address varchar(42) [unique, not null]
  avatar_url text
  tier enum('Bronze','Silver','Gold','Platinum','Diamond') [default: 'Bronze']
  total_points bigint [default: 0]
  login_streak integer [default: 0]
  referral_code varchar(50) [unique]
  referred_by uuid
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (wallet_address)
    (total_points)
    (referral_code)
  }
}

Table social_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]

  platform varchar(20) [not null]
  platform_user_id varchar(100) [not null]

  username varchar(100)
  display_name varchar(150)
  avatar_url text

  access_token_encrypted text
  refresh_token_encrypted text
  token_expires_at timestamp

  metadata jsonb [default: `'{}'::jsonb`]

  connected_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (user_id, platform) [unique]
    (platform, platform_user_id) [unique]
    (platform, username) [unique]                  // ← ĐÃ FIX: không còn nulls_distinct
    (user_id)
  }
}

Table campaigns {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(255) [not null]
  description text
  category varchar(50)
  reward_points integer [not null]
  min_tasks_to_complete integer [default: 1]
  questers_count integer [default: 0]
  start_at timestamp
  end_at timestamp
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table tasks {
  id uuid [pk, default: `gen_random_uuid()`]
  campaign_id uuid [not null]
  name varchar(255) [not null]
  description text
  url_action text
  reward_points integer [not null]
  task_type varchar(50) [not null]
  task_order integer [default: 0]
  verification_type varchar(30) [default: 'auto']
  created_at timestamp [default: `now()`]
}

Table user_tasks {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  campaign_id uuid [not null]
  task_id uuid [not null]
  status varchar(20) [default: 'pending']
  proof_data text
  completed_at timestamp
  points_earned integer [default: 0]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, task_id) [unique]
    (status)
  }
}

Table task_claims {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  campaign_id uuid [not null]
  task_id uuid [not null]
  points_earned integer [not null]
  claimed_at timestamp [default: `now()`]

  indexes {
    (user_id, task_id) [unique]
  }
}

Table campaign_participation {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  campaign_id uuid [not null]
  joined_at timestamp [default: `now()`]

  indexes {
    (user_id, campaign_id) [unique]
  }
}

Table campaign_claims {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  campaign_id uuid [not null]
  points_earned integer [not null]
  claimed_at timestamp [default: `now()`]

  indexes {
    (user_id, campaign_id) [unique]
  }
}

// Relationships
Ref: users.referred_by > users.id

Ref: social_accounts.user_id > users.id [delete: cascade]

Ref: tasks.campaign_id > campaigns.id [delete: cascade]

Ref: user_tasks.user_id > users.id [delete: cascade]
Ref: user_tasks.campaign_id > campaigns.id [delete: cascade]
Ref: user_tasks.task_id > tasks.id [delete: cascade]

Ref: task_claims.user_id > users.id [delete: cascade]
Ref: task_claims.campaign_id > campaigns.id [delete: cascade]
Ref: task_claims.task_id > tasks.id [delete: cascade]

Ref: campaign_participation.user_id > users.id [delete: cascade]
Ref: campaign_participation.campaign_id > campaigns.id [delete: cascade]

Ref: campaign_claims.user_id > users.id [delete: cascade]
Ref: campaign_claims.campaign_id > campaigns.id [delete: cascade]